# Mobile

Demo/Android/AICamera/: README.md
Demo/Android/AICamera/app/: CMakeLists.txt  FindPaddle.cmake  build.gradle
Demo/Android/AICamera/app/src/main/cpp/: paddle_image_recognizer.cpp
Demo/Android/AICamera/gradle/wrapper/: gradle-wrapper.properties
Demo/Android/MyNdk/: local.properties
Demo/Android/MyNdk/app/: CMakeLists.txt  build.gradle
Demo/Android/MyNdk/app/ComputeLibrary/include/half/: half.hpp
Demo/Android/MyNdk/app/src/androidTest/java/com/example/zfq/myndk/: ExampleInstrumentedTest.java
Demo/Android/MyNdk/app/src/main/: AndroidManifest.xml
Demo/Android/MyNdk/app/src/main/cpp/: Utils.cpp  native-lib.cpp
Demo/Android/MyNdk/app/src/main/java/com/example/zfq/myndk/: MainActivity.java
Demo/Android/MyNdk/app/src/main/res/layout/: activity_main.xml
Demo/Android/MyNdk/app/src/main/res/values/: strings.xml
Demo/Android/MyNdk/app/src/test/java/com/example/zfq/myndk/: ExampleUnitTest.java
Demo/Android/MyNdk/gradle/wrapper/: gradle-wrapper.properties
benchmark/tool/C/: CMakeLists.txt  FindPaddle.cmake  README.md  inference.cc
